<resources>
    <string name="app_name">coreCraft</string>
    <string name="loadingScreen_text_0">Your personal digital all-in-one\ncoach</string>
    <string name="background_image">Background image</string>
    <string name="previous_button">Previous button</string>
    <string name="reset_password">Reset Password</string>
    <string name="pls_enter_email">Please enter your registered email . An otp code will be sent to you.</string>
    <string name="email">Email</string>
    <string name="invalid_email_error">** Please enter a valid email</string>
    <string name="Continue">Continue</string>
    <string name="otp_code">OTP Code</string>
    <string name="otp_code_floor">otp code tile</string>
    <string name="invalid_otp_code_error">** Please enter a valid OTP code</string>
    <string name="new_pwd">New Password</string>
    <string name="motivation_txt">Motivation Text ,Motivation Text , Motivation Text, blabla bla bla</string>
    <string name="password">Password</string>
    <string name="eye">eye</string>
    <string name="invalid_pwd_error">⬤ At least contains 8 characters \n⬤ Contains a capital and numeric character</string>
    <string name="invalid_pwd_8chars_error">⬤ At least contains 8 characters</string>
    <string name="invalid_pwd_alphanumeric_error">⬤ Contains a capital and numeric character</string>
    <string name="pwd_reset_success">Password reset successfully. Continue to</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="workouts">Workouts</string>
    <string name="plans">Plans</string>
    <string name="stats">Stats</string>
    <string name="bot">Bot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_back_button">main back button</string>
    <string name="main_home_button">main home button</string>
    <string name="custom_workouts">Custom Workouts</string>
    <string name="workout_title">WORKOUT TITLE</string>
    <string name="exercise_image">exercise image</string>
    <string name="sets">sets</string>
    <string name="reps">reps</string>
    <string name="filter">filter</string>
    <string name="filter_image">filter image</string>
    <string name="equipment">Equipment</string>
    <string name="back_muscles">Back muscles</string>
    <string name="back_exercises">Back Exercises</string>
    <string name="chest_muscles">Chest muscles</string>
    <string name="chest_exercises">Chest Exercises</string>
    <string name="arm_exercises">Arm Exercises</string>
    <string name="arm_muscles">Arm muscles</string>
    <string name="leg_muscles">Leg muscles</string>
    <string name="leg_exercises">Leg Exercises</string>
    <string name="shoulder_muscles">Shoulder muscles</string>
    <string name="shoulder_exercises">Shoulder Exercises</string>
    <string name="abs_muscles">Abs muscles</string>
    <string name="abs_exercises">Abs Exercises</string>
    <string name="exercise_gif">Exercise gif</string>
    <string name="description">Description :</string>
    <string name="instructions">Instructions :</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="ok">Ok</string>
    <string name="plus">+</string>
    <string name="select_exercise">Select Exercise</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="_9_30">9:30</string>
    <string name="_06_06_2024">06/06/2024</string>
    <string name="dropdown">Dropdown</string>
    <string name="my_exercises">My Exercises</string>
    <string name="my_workouts">My Workouts</string>
    <string name="my_plans">My Plans</string>
    <string name="general_stats">General Stats</string>
    <string name="time">Time</string>
    <string name="kcal">Kcal</string>
    <string name="_10">10</string>
    <string name="exercise_frequency">Exercise Frequency</string>
    <string name="my_stats">My Stats</string>
    <string name="total_weight">Total Weight</string>
</resources>