<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/bottom_toolbar_background"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme">
    <LinearLayout
        android:id="@+id/bottom_toolbar_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="5">
        <TextView
            android:id="@+id/bottom_toolbar_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="@color/primary_color_3"
            android:text="@string/home"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            app:drawableTopCompat="@drawable/bottom_toolbar_home"
            app:drawableTint="@color/primary_color_3"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/bottom_toolbar_workout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="@color/primary_color_5"
            android:text="@string/workouts"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            app:drawableTopCompat="@drawable/bottom_toolbar_workout"
            app:drawableTint="@color/primary_color_5"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/bottom_toolbar_plans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="@color/primary_color_5"
            android:text="@string/plans"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            app:drawableTopCompat="@drawable/bottom_toolbar_plans"
            app:drawableTint="@color/primary_color_5"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/bottom_toolbar_stats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="@color/primary_color_5"
            android:text="@string/stats"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            app:drawableTopCompat="@drawable/bottom_toolbar_stats"
            app:drawableTint="@color/primary_color_5"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/bottom_toolbar_bot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="@color/primary_color_5"
            android:text="@string/bot"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            app:drawableTopCompat="@drawable/bottom_toolbar_bot"
            app:drawableTint="@color/primary_color_5"
            android:layout_weight="1"/>
    </LinearLayout>
</androidx.appcompat.widget.Toolbar>
