<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/background_color"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme">
    <LinearLayout
        android:layout_marginEnd="20dp"
        android:id="@+id/toolbar_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/toolbar_back_btn"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:background="@drawable/toolbar_back"
            android:contentDescription="@string/main_back_button"
            />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:fontFamily="@font/carterone_regular"
            android:text="@string/my_workouts" />

        <Button
            android:id="@+id/toolbar_home_btn"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:background="@drawable/toolbar_home"
            android:contentDescription="@string/main_home_button"
            />

    </LinearLayout>
</androidx.appcompat.widget.Toolbar>
